[package]
name = "rust_call_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-agent = "0.29.0"
ic-utils = "0.29.0"
candid = "^0.9"
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["macros"] }
async-recursion = "1.0.5"
